<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:id="@+id/donation_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/item_donation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/donation_title"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/item_donation_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/description" />
        <TextView
            android:id="@+id/item_donation_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/quantity" />
        <TextView
            android:id="@+id/item_donation_pickup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/pick_up_time"/>
        <TextView
            android:id="@+id/item_donation_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/phone_number"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/item_donation_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

