<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">
    <LinearLayout
        android:id="@+id/request_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/item_request_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/donation_title"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/item_request_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/description" />
        <TextView
            android:id="@+id/item_request_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/quantity" />
        <TextView
            android:id="@+id/item_request_pickup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/pick_up_time"/>
        <TextView
            android:id="@+id/item_request_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/phone_number"/>
        <TextView
            android:id="@+id/item_request_donor_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" />
        <TextView
            android:id="@+id/item_request_coordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>

