<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="my.edu.utem.ftmk.bitp3453.achifapp.ui.donations.DonationsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_donations" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="my.edu.utem.ftmk.bitp3453.achifapp.ui.requests.RequestsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="my.edu.utem.ftmk.bitp3453.achifapp.ui.listing.ListingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_listing" />
</navigation>